Updated CSS scope for dark mode

--- a/web/css/bootstrap_transitive-bs-root.css
+++ b/web/css/bootstrap_transitive-bs-root.css
@@ -119,6 +119,8 @@
   --bs-form-invalid-color: #dc3545;
   --bs-form-invalid-border-color: #dc3545;
 }
+
+[data-bs-theme=dark] .transitive-bs-root,
 .transitive-bs-root [data-bs-theme=dark] {
   color-scheme: dark;
   --bs-body-color: #dee2e6;
